feat: 依頼管理機能の拡張（バックエンド実装）
依頼に関連する詳細情報を管理できるように機能を拡張しました。

## 追加機能
- 依頼人マスタ管理（会社情報含む）
- 品目マスタ管理
- 依頼明細管理（複数品目対応）
- 依頼に日付、メモ等の詳細情報を追加

## データベース変更
- 会社マスタテーブル（companies）
- 依頼人マスタテーブル（clients）
- 品目マスタテーブル（items）
- 依頼明細テーブル（task_items）
- tasksテーブルに新カラム追加（request_date, client_id, note, expected_delivery_date, delivery_date）

## API追加
- GET /companies - 会社一覧取得
- GET /clients - 依頼人一覧取得
- GET /items - 品目一覧取得

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>